revising landing page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<center><h2>This website has no content!</h2><h4>Please nag Dylan Madigan to fix this.</h4></center>
+<center>
+<h1>Task Force 036</h1>
+<h2>This website has not been completed yet!</h2> 
+<h5>Please contact <a href="mailto:contact@usachannel22.com">USA Channel 22</a> for more information.</h5>
+</center>
