code reformatting + footer cleanup

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -90,38 +90,37 @@ background-image: linear-gradient(to bottom,#0066da 0,#00c0fc 100%) !important;
 </div>
 
 <div class="panel panel-danger">
-<div class="panel-heading">
-<h3 class="panel-title center">Task Force 036</h3>
+    <div class="panel-heading">
+        <h3 class="panel-title center">Task Force 036</h3>
+    </div>
+    <div class="panel-body">
+        The website is under construction, please check back later.
+        <br>
+		-General Madigan.
+    </div>
 </div>
-<div class="panel-body">
-The website is under construction, please check back later.
-<br>-General Madigan.
-</div></div>
 
 <div class="panel panel-danger">
-<div class="panel-heading">
-<h3 class="panel-title center">DIV Title</h3>
-</div>
-<div class="panel-body">
-DIV Paragraph.
-</div></div>
-
-<div class="panel panel-danger panel-body">
-<b>DIV</b> 
-DIV Paragraph.
+    <div class="panel-heading">
+        <h3 class="panel-title center">DIV Title</h3>
+    </div>
+    <div class="panel-body">
+        DIV Paragraph.
+    </div>
 </div>
 
 <div class="panel panel-danger panel-body">
-DIV Paragraph.
+    <b>DIV</b> DIV Paragraph.
+</div>
+
+<div class="panel panel-danger panel-body">
+    DIV Paragraph.
 </div>
 
 <!-- [begin footer] -->
 
 <div class="panel panel-danger panel-body center">
-<img src="/logo_smaller_blank.png" alt="Task Force">
 <a href="https://taskforce036.com"><div class="label label-info">&copy; Task Force 036</div></a>
-  <a href="https://usachannel22.com"><div class="label label-info">Hosted by USA Channel 22</div></a> 
-<img src="/S3_Logo_Small.png" alt="USA Channel 22 Hosting" width="102" height="62">
 </div>
 </div>
 </body>
