--- a/members.html
+++ b/members.html
@@ -86,41 +86,40 @@ background-image: linear-gradient(to bottom,#0066da 0,#00c0fc 100%) !important;
 
 <!-- [end header] -->
 
-<div class="panel panel-danger panel-body">Here is an active* membership list, along with rank and join date.
-</br>-Note that some of these guys havn't been around in years.</div>
+<div class="panel panel-danger panel-body">
+    Here is an active* membership list, along with rank and join date.
+    <br> -Note that some of these guys havn't been around in years.
+</div>
 
 <div class="panel panel-danger">
-<div class="panel-heading">
-<h3 class="panel-title">Active Members</h3>
+    <div class="panel-heading">
+        <h3 class="panel-title">Active Members</h3>
+    </div>
+    <div class="panel-body">
+		Rank - Name - PSN Name - Join Date
+		<br>
+		<br> Gen Dylan Madigan (DylanMadigan) 12/26/2014
+		<br> Cpt Domo (XxDomo_32xX) 06/21/2010
+		<br> Lt Trix (xTrix-_-//willafred) 06/22/2010
+		<br> Sgt Pack Man (packmantioga) 06/22/2010
+		<br>
+		<br> Cpl Killa 592 (Killa592) 10/29/2010
+		<br>
+		<br> Pvt Chris (dumbnutzilla) 11/10/2013
+		<br> Pvt Monster (Monsterest5150) 12/27/2013
+		<br> Pvt Kayla (KaylaKelly) 12/29/2013
+		<br> Pvt Dave (rocknrollDaVE) 12/29/2013
+		<br> Pvt Bartek (xXBEASTbartXx) 02/20/2014
+		<br> Pvt Josh (xXDarkJoshXx) XX/XX/2014
+		<br> Pvt Chef (ChefBoyYARDe) 06/20/2014
+		<br>
+	</div>
 </div>
-<div class="panel-body">
-Rank - Name - PSN Name - Join Date<br>
-<br>
-Gen Dylan Madigan (DylanMadigan) 12/26/2014<br>
-Cpt Domo (XxDomo_32xX) 06/21/2010<br>
-Lt Trix (xTrix-_-//willafred) 06/22/2010<br>
-Sgt Pack Man (packmantioga) 06/22/2010<br>
-<br>
-Cpl Killa 592 (Killa592) 10/29/2010<br>
-<br>
-Pvt Chris (dumbnutzilla) 11/10/2013<br>
-Pvt Monster (Monsterest5150) 12/27/2013<br>
-Pvt Kayla (KaylaKelly) 12/29/2013<br>
-Pvt Dave (rocknrollDaVE) 12/29/2013<br>
-Pvt Bartek (xXBEASTbartXx) 02/20/2014<br>
-Pvt Josh (xXDarkJoshXx) XX/XX/2014<br>
-Pvt Chef (ChefBoyYARDe) 06/20/2014<br>
-</div>
-</div>
-
 
 <!-- [begin footer] -->
 
 <div class="panel panel-danger panel-body center">
-<img src="/logo_smaller_blank.png" alt="Task Force">
 <a href="https://taskforce036.com"><div class="label label-info">&copy; Task Force 036</div></a>
-  <a href="https://usachannel22.com"><div class="label label-info">Hosted by USA Channel 22</div></a> 
-<img src="/S3_Logo_Small.png" alt="USA Channel 22 Hosting" width="102" height="62">
 </div>
 </div>
 </body>
