--- a/news.html
+++ b/news.html
@@ -88,28 +88,24 @@ background-image: linear-gradient(to bottom,#0066da 0,#00c0fc 100%) !important;
 
 
 <div class="panel panel-danger">
-<div class="panel-heading">
-<h3 class="panel-title">Christmas in GTA 5 (12/26/2015)</h3>
-</div>
-<div class="panel-body">
-
-This year was a fairly productive year for TF36. We maintain a strong hand in GTA, dominated in a few battles on COD Ghosts, and just started up in Battlefield 4 (All DLCs). 
-</br>
-</br> We look forward to still being a strong team in this next year. Merry Christmas and Happy New year everyone!
-</br> 
-</br> <img src="http://prod.hosted.cloud.rockstargames.com/ugc/gta5photo/-_KUFQdcW0-sIWOI-fQaBw_0_0.jpg" width="738" height="412" />'
-
-</div>
+    <div class="panel-heading">
+        <h3 class="panel-title">Christmas in GTA 5 (12/26/2015)</h3>
+    </div>
+    <div class="panel-body">
+        This year was a fairly productive year for TF36. We maintain a strong hand in GTA, dominated in a few battles on COD Ghosts, and just started up in Battlefield 4 (All DLCs).
+        <br>
+        <br> We look forward to still being a strong team in this next year. Merry Christmas and Happy New year everyone!
+        <br>
+        <br>
+        <img src="http://prod.hosted.cloud.rockstargames.com/ugc/gta5photo/-_KUFQdcW0-sIWOI-fQaBw_0_0.jpg" width="738" height="412">
+    </div>
 </div>
 
 
 <!-- [begin footer] -->
 
 <div class="panel panel-danger panel-body center">
-<img src="/logo_smaller_blank.png" alt="Task Force">
 <a href="https://taskforce036.com"><div class="label label-info">&copy; Task Force 036</div></a>
-  <a href="https://usachannel22.com"><div class="label label-info">Hosted by USA Channel 22</div></a> 
-<img src="/S3_Logo_Small.png" alt="USA Channel 22 Hosting" width="102" height="62">
 </div>
 </div>
 </body>
