--- a/recruitment.html
+++ b/recruitment.html
@@ -86,66 +86,58 @@ background-image: linear-gradient(to bottom,#0066da 0,#00c0fc 100%) !important;
 
 <!-- [end header] -->
 
-
+<div class="panel panel-danger">
+    <div class="panel-heading">
+        <h3 class="panel-title center">Overview</h3>
+    </div>
+    <div class="panel-body">
+        This post is the same as on the main page,
+        <br>
+        <br> TF36 is a special operations style squad who plays in various games (mostly PC at this point). Our most common game of operation at this time is GTA V Online. We are kind players, who protect others. Anyone who diverges will be dealt with.
+        <br>
+        <br> We do not operate as a military organization all the time, we do often just mess around and have fun, but when shit hits the fan or we are given an objective, we will perform our tasks flawlessly.
+        <br>
+        <br> You don't have to play a game 24/7 to be great at it, sometimes all you need to do is thinks things through and plan it out. Now when you have a whole team communicating and working with each other as one team (as opposed to several random players), you will immediately have a huge advantage, this is often the reason we are successful against teams made of much higher level players.
+        <br>
+        <br> We will often do trainings (normally in games like GTA, just random missions) where things are easy and we simply play to get used to a tactical game play. It does not take long to learn this method of game play as long as you actually wish to learn how, and once your good at it and working with the team, it will make any operation seem easy, both the primary and secondary plans (yes we always have a worst case scenario plan).
+        <br>
+        <br>
+        <br> -General Madigan.
+        <br>
+        <br>
+        <br> Please note some of these pictures are older, therefore contain our old uniform.
+        <br>
+        <img src="Media\Images\20161224220412_1.jpg" class="img-rounded" alt="Winter 2016" width="550" height="309">
+        <img src="Media\Images\20170709105351_1.jpg" class="img-rounded" alt="2017 Uniform" width="550" height="309">
+        <br>
+        <img src="Media\Images\20170724214702_1.jpg" class="img-rounded" alt="In Tunnel During Op" width="550" height="309">
+        <img src="Media\Images\20170803214017_1.jpg" class="img-rounded" alt="Helicopter Evac" width="550" height="309">
+        <br>
+        <img src="Media\Images\Delta Sniper.jpg" class="img-rounded" alt="God of Death" width="550" height="309">
+        <img src="Media\Images\Squad Messing Around.jpg" class="img-rounded" alt="Jack Off Animation Party" width="550" height="309">
+    </div>
+</div>
 
 
 <div class="panel panel-danger">
-<div class="panel-heading">
-<h3 class="panel-title center">Overview</h3>
+    <div class="panel-heading">
+        <h3 class="panel-title center">Requirements (WIP)</h3>
+    </div>
+    <div class="panel-body">
+        General:
+        <br>
+        <br> Operatives must be respectful of others, both those above and below them. Remember, we fight for others.
+        <br>
+        <br> Operatives must have the ability to follow orders. This IS a military based squad. As long as you can listen, we can find a place somewhere for you on our team.
+        <br>
+        <br>
+    </div>
 </div>
-<div class="panel-body">
-This post is the same as on the main page,<br>
-<br>
-TF36 is a special operations style squad who plays in various games (mostly PC at this point). Our most common game of operation at this time is GTA V Online. We are kind players, who protect others. Anyone who diverges will be dealt with.<br>
-<br>
-We do not operate as a military organization all the time, we do often just mess around and have fun, but when shit hits the fan or we are given an objective, we will perform our tasks flawlessly. <br>
-<br>
-You don't have to play a game 24/7 to be great at it, sometimes all you need to do is thinks things through and plan it out. Now when you have a whole team communicating and working with each other as one team (as opposed to several random players), you will immediately have a huge advantage, this is often the reason we are successful against teams made of much higher level players. <br>
-<br>
-We will often do trainings (normally in games like GTA, just random missions) where things are easy and we simply play to get used to a tactical game play. It does not take long to learn this method of game play as long as you actually wish to learn how, and once your good at it and working with the team, it will make any operation seem easy, both the primary and secondary plans (yes we always have a worst case scenario plan). <br>
-<br>
-<br>-General Madigan.<br>
-<br>
-<br>
-Please note some of these pictures are older, therefore contain our old uniform.<br>
-<img src="Media\Images\20161224220412_1.jpg" class="img-rounded" alt="Winter 2016" width="550" height="309">
-<img src="Media\Images\20170709105351_1.jpg" class="img-rounded" alt="2017 Uniform" width="550" height="309">
-<br>
-<img src="Media\Images\20170724214702_1.jpg" class="img-rounded" alt="In Tunnel During Op" width="550" height="309">
-<img src="Media\Images\20170803214017_1.jpg" class="img-rounded" alt="Helicopter Evac" width="550" height="309">
-<br>
-<img src="Media\Images\Delta Sniper.jpg" class="img-rounded" alt="God of Death" width="550" height="309">
-<img src="Media\Images\Squad Messing Around.jpg" class="img-rounded" alt="Jack Off Animation Party" width="550" height="309">
-</div></div>
-
-
-
-
-<div class="panel panel-danger">
-<div class="panel-heading">
-<h3 class="panel-title center">Requirements (WIP)</h3>
-</div>
-<div class="panel-body">
-General:<br>
-<br>
-  Operatives must be respectful of others, both those above and below them. Remember, we fight for others.<br>
-  <br>
-  Operatives must have the ability to follow orders. This IS a military based squad. As long as you can listen, we can find a place somewhere for you on our team.<br>
-  <br>
-  
-</div></div>
-
-
-
-
 
 <!-- [begin footer] -->
 
 <div class="panel panel-danger panel-body center">
-<img src="/logo_smaller_blank.png" alt="Task Force">
 <a href="https://taskforce036.com"><div class="label label-info">&copy; Task Force 036</div></a>
-  <a href="https://usachannel22.com"><div class="label label-info">Hosted by USA Channel 22</div></a> 
-<img src="/S3_Logo_Small.png" alt="USA Channel 22 Hosting" width="102" height="62">
 </div>
 </div>
 </body>
