--- a/games.html
+++ b/games.html
@@ -87,57 +87,66 @@ background-image: linear-gradient(to bottom,#0066da 0,#00c0fc 100%) !important;
 <!-- [end header] -->
 
 <div class="panel panel-danger">
-<div class="panel-heading">
-<h3 class="panel-title">TF36 Official Games</h3>
-</div>
-<div class="panel-body">
-We officially operate in the following games, note most players only have PC:
-<br>
-<br>Arma III (PC)<br>
-<img src="Media\Images\Games\ArmAIII.png" class="img-rounded" alt="Task Force 036" width="700" height="350">
-<br>
-<br>Battlefield 4 (PC)<br>
-<img src="Media\Images\Games\Battlefield4.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
-<br>
-<br>Grand Theft Auto: V/Online (PS3) (PC)<br>
-<img src="Media\Images\Games\GTAV.jpg" class="img-rounded" alt="Task Force 036" width="700" height="394">
-<br>
-<br>Call of Duty: Ghosts (PS3) (PC)<br>
-<img src="Media\Images\Games\Ghosts.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
-<br>
-<br>Arma II Free (PC)<br>
-<img src="Media\Images\Games\ArmaII.png" class="img-rounded" alt="Task Force 036" width="700" height="438">
-<br>
-<br>Call of Duty: Black Ops II (PS3)<br>
-<img src="Media\Images\Games\BO2.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
-<br>
-<br>Call of Duty: Modern Warfare 3 (PS3)<br>
-<img src="Media\Images\Games\MW3.png" class="img-rounded" alt="Task Force 036" width="700" height="743">
-<br>
-<br>Socom 4 (PS3)<br>
-<img src="Media\Images\Games\Socom4.png" class="img-rounded" alt="Task Force 036" width="700" height="438">
-<br>
-<br>Call of Duty: Black Ops I (PS3)<br>
-<img src="Media\Images\Games\BO1.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
-<br>
-<br>Call of Duty: Modern Warfare 2 (PS3) (PC)<br>
-<img src="Media\Images\Games\MW2.png" class="img-rounded" alt="Task Force 036" width="700" height="438">
-<br>
-<br>Grand Theft Auto: IV (PS3) (PC)<br>
-<img src="Media\Images\Games\GTAIV.png" class="img-rounded" alt="Task Force 036" width="700" height="349">
-<br>
-<br>Call of Duty: Modern Warfare 1 (PS3) (PC)<br>
-<img src="Media\Images\Games\MW1.png" class="img-rounded" alt="Task Force 036" width="700" height="473">
-</div>
+    <div class="panel-heading">
+        <h3 class="panel-title">TF36 Official Games</h3>
+    </div>
+    <div class="panel-body">
+        We officially operate in the following games, note most players only have PC:
+        <br>
+        <br> Arma III (PC)
+        <br>
+        <img src="Media\Images\Games\ArmAIII.png" class="img-rounded" alt="Task Force 036" width="700" height="350">
+        <br>
+        <br> Battlefield 4 (PC)
+        <br>
+        <img src="Media\Images\Games\Battlefield4.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
+        <br>
+        <br> Grand Theft Auto: V/Online (PS3) (PC)
+        <br>
+        <img src="Media\Images\Games\GTAV.jpg" class="img-rounded" alt="Task Force 036" width="700" height="394">
+        <br>
+        <br> Call of Duty: Ghosts (PS3) (PC)
+        <br>
+        <img src="Media\Images\Games\Ghosts.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
+        <br>
+        <br> Arma II Free (PC)
+        <br>
+        <img src="Media\Images\Games\ArmaII.png" class="img-rounded" alt="Task Force 036" width="700" height="438">
+        <br>
+        <br> Call of Duty: Black Ops II (PS3)
+        <br>
+        <img src="Media\Images\Games\BO2.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
+        <br>
+        <br> Call of Duty: Modern Warfare 3 (PS3)
+        <br>
+        <img src="Media\Images\Games\MW3.png" class="img-rounded" alt="Task Force 036" width="700" height="743">
+        <br>
+        <br> Socom 4 (PS3)
+        <br>
+        <img src="Media\Images\Games\Socom4.png" class="img-rounded" alt="Task Force 036" width="700" height="438">
+        <br>
+        <br> Call of Duty: Black Ops I (PS3)
+        <br>
+        <img src="Media\Images\Games\BO1.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
+        <br>
+        <br> Call of Duty: Modern Warfare 2 (PS3) (PC)
+        <br>
+        <img src="Media\Images\Games\MW2.png" class="img-rounded" alt="Task Force 036" width="700" height="438">
+        <br>
+        <br> Grand Theft Auto: IV (PS3) (PC)
+        <br>
+        <img src="Media\Images\Games\GTAIV.png" class="img-rounded" alt="Task Force 036" width="700" height="349">
+        <br>
+        <br> Call of Duty: Modern Warfare 1 (PS3) (PC)
+        <br>
+        <img src="Media\Images\Games\MW1.png" class="img-rounded" alt="Task Force 036" width="700" height="473">
+    </div>
 </div>
 
 <!-- [begin footer] -->
 
 <div class="panel panel-danger panel-body center">
-<img src="/logo_smaller_blank.png" alt="Task Force">
 <a href="https://taskforce036.com"><div class="label label-info">&copy; Task Force 036</div></a>
-  <a href="https://usachannel22.com"><div class="label label-info">Hosted by USA Channel 22</div></a> 
-<img src="/S3_Logo_Small.png" alt="USA Channel 22 Hosting" width="102" height="62">
 </div>
 </div>
 </body>
