--- a/index.html
+++ b/index.html
@@ -1,51 +1,63 @@
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/Thing">
+
 <head>
-<title>Task Force 036</title>
-<meta charset="UTF-8">
-<meta name="author" content="https://usachannel22.com">
-<meta itemprop="name" content="Task Force 36">
-<meta itemprop="url" content="https://taskforce036.com/">
-<link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+    <!-- Required Meta Tags -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<title>Task Force 036</title>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="/css/bootstrap.min.css" rel="stylesheet">
-<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-<![endif]-->
-<script src="https://code.jquery.com/jquery.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-</script>
-<style type="text/css">
- body.c5 {background-color:#000000; background-image:url(/hexagon3.png); background-repeat:repeat-x repeat-y;margin:10px; background-attachment: fixed;}
- body {
-    -webkit-animation:spin 5s linear infinite;
-    -moz-animation:spin 5s linear infinite;
-    animation:spin 5s linear infinite;
-}
+	<meta itemprop="name" content="Task Force 36">
+    <meta itemprop="url" content="https://taskforce036.com">
+    <meta itemprop="image" content="https://taskforce036.com/logo.png">
+    <meta itemprop="description" name="description" content="TF36 is a special operations style squad who plays in various games.">
+	
+	<!-- Custom CSS -->
+	<style type="text/css">
+	body.c5 {
+		background-color:#000000; 
+		background-image:url(hexagon3.png); 
+		background-repeat:repeat-x repeat-y;margin:10px; 
+		background-attachment: fixed;
+	}
+	
+	div.c4 {max-width:1200px !important;}
+	.center {text-align:center !important;}
+	.left {float:left;}
+	.right {float:right;}
+	.panel-body {text-align:justify;}
+	.justify {text-align:justify;}
+	.middle {margin:0 auto !important;}
+	.well {margin-bottom:0px !important;}
+	.panel-danger {
+		background-color:rgba(17, 17, 17, 0.9) !important; 
+		color:#DDDDDD !important; 
+		border-color:#00c0fc !important;
+	}
+	.panel-heading {
+		background-image: -webkit-linear-gradient(top,yellow 0,green 100%) !important;
+		background-image: linear-gradient(to bottom,#0066da 0,#00c0fc 100%) !important;
+	}
+	.panel-title {color:#FFFFFF !important;}
+	.panel-heading {border-color:#00c0fc !important;}
+	.navbar-brand {color:#FFFFFF !important;}
+	.navbar-nav {color:#FFFFFF !important;}
+	p.thick {font-weight:bold;}
+	</style>
 
- div.c4 {max-width:1200px !important;}
- .center {text-align:center !important;}
- .left {float:left;}
- .right {float:right;}
- .panel-body {text-align:justify;}
- .justify {text-align:justify;}
- .middle {margin:0 auto !important;}
- .well {margin-bottom:0px !important;}
- 
- .panel-danger {background-color:rgba(17, 17, 17, 0.9) !important; color:#DDDDDD !important; border-color:#00c0fc !important;
- }
- .panel-heading {  background-image: -webkit-linear-gradient(top,yellow 0,green 100%) !important;
-background-image: linear-gradient(to bottom,#0066da 0,#00c0fc 100%) !important;
-}
-.panel-title { color:#FFFFFF !important;}
-.panel-heading { border-color:#00c0fc !important;}
-.navbar-brand { color:#FFFFFF !important;}
-.navbar-nav { color:#FFFFFF !important;}
- p.thick {font-weight:bold;}
-</style>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha256-bZLfwXAP04zRMK2BjiO8iu9pf4FbLqX6zitd+tIvLhE=" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha256-8uHMIn1ru0GS5KO+zf7Zccf8Uw12IA5DrdEcmMuWLFM=" crossorigin="anonymous" />
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
 </head>
 
 <body class="c5">
@@ -65,19 +77,19 @@ background-image: linear-gradient(to bottom,#0066da 0,#00c0fc 100%) !important;
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li><a href="https://taskforce036.com/index.html">Main Page</a></li>
-      <li><a href="https://taskforce036.com/news.html">News and Events</a></li>
-      <li><a href="https://taskforce036.com/recruitment.html">Recruitment</a></li>
-      <li><a href="https://taskforce036.com/games.html">Games</a></li>
-      <li><a href="https://taskforce036.com/relations.html">Relations</a></li>
-      <li><a href="https://taskforce036.com/members.html">TF36 Operatives</a></li>
+      <li><a href="index.html">Main Page</a></li>
+      <li><a href="news.html">News and Events</a></li>
+      <li><a href="recruitment.html">Recruitment</a></li>
+      <li><a href="games.html">Games</a></li>
+      <li><a href="relations.html">Relations</a></li>
+      <li><a href="members.html">TF36 Operatives</a></li>
 
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Officers Only <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="https://taskforce036.com/Officers/operatives.html">Operatives</a></li>
+          <li><a href="Officers/operatives.html">Operatives</a></li>
         </ul>
       </li>
     </ul>
@@ -143,4 +155,17 @@ background-image: linear-gradient(to bottom,#0066da 0,#00c0fc 100%) !important;
 <a href="https://taskforce036.com"><div class="label label-info">&copy; Task Force 036</div></a>
 </div>
 </div>
+
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.0/js/bootstrap.min.js" integrity="sha256-kJrlY+s09+QoWjpkOrXXwhxeaoDz9FW5SaxF8I0DibQ=" crossorigin="anonymous"></script>
+	<script>
+        <!-- activate button for current page -->
+        $(document).ready(function() {
+            $('a[href="' + this.location.pathname + '"]').parent().addClass('active');
+        });
+    </script>
+	
 </body>
+</html>
