Make images properly responsive

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 </div>
 
 
+
+
 <div class="panel panel-danger">
     <div class="panel-heading">
         <h3 class="panel-title center">Task Force 036 Overview</h3>
@@ -120,15 +122,16 @@
 		<br>
 		<br>
 		<br> Please note some of these pictures are older, therefore contain our old uniform.
-		<br>
-		<img src="Media\Images\20161224220412_1.jpg" class="img-rounded" alt="Winter 2016" width="550" height="309">
-		<img src="Media\Images\20170709105351_1.jpg" class="img-rounded" alt="2017 Uniform" width="550" height="309">
-		<br>
-		<img src="Media\Images\20170724214702_1.jpg" class="img-rounded" alt="In Tunnel During Op" width="550" height="309">
-		<img src="Media\Images\20170803214017_1.jpg" class="img-rounded" alt="Helicopter Evac" width="550" height="309">
-		<br>
-		<img src="Media\Images\Delta Sniper.jpg" class="img-rounded" alt="God of Death" width="550" height="309">
-		<img src="Media\Images\Squad Messing Around.jpg" class="img-rounded" alt="Jack Off Animation Party" width="550" height="309">
+		<div class="row">
+			<div class="col-md-6"><img src="Media\Images\20161224220412_1.jpg" class="img-rounded img-responsive" alt="Winter 2016"></div>
+			<div class="col-md-6"><img src="Media\Images\20170709105351_1.jpg" class="img-rounded img-responsive" alt="2017 Uniform"></div>
+			
+			<div class="col-md-6"><img src="Media\Images\20170724214702_1.jpg" class="img-rounded img-responsive" alt="In Tunnel During Op"></div>
+			<div class="col-md-6"><img src="Media\Images\20170803214017_1.jpg" class="img-rounded img-responsive" alt="Helicopter Evac"></div>
+			
+			<div class="col-md-6"><img src="Media\Images\Delta Sniper.jpg" class="img-rounded img-responsive" alt="God of Death"></div>
+			<div class="col-md-6"><img src="Media\Images\Squad Messing Around.jpg" class="img-rounded img-responsive" alt="Jack Off Animation Party"></div>
+		</div>
 	</div>
 </div>
 
