--- a/news.html
+++ b/news.html
@@ -109,7 +109,7 @@
         <br> We look forward to still being a strong team in this next year. Merry Christmas and Happy New year everyone!
         <br>
         <br>
-        <img src="http://prod.hosted.cloud.rockstargames.com/ugc/gta5photo/-_KUFQdcW0-sIWOI-fQaBw_0_0.jpg" width="738" height="412">
+        <img src="http://prod.hosted.cloud.rockstargames.com/ugc/gta5photo/-_KUFQdcW0-sIWOI-fQaBw_0_0.jpg" class="img-responsive">
     </div>
 </div>
 
