--- a/games.html
+++ b/games.html
@@ -107,51 +107,51 @@
         <br>
         <br> Arma III (PC)
         <br>
-        <img src="Media\Images\Games\ArmAIII.png" class="img-rounded" alt="Task Force 036" width="700" height="350">
+        <img src="Media\Images\Games\ArmAIII.png" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Battlefield 4 (PC)
         <br>
-        <img src="Media\Images\Games\Battlefield4.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
+        <img src="Media\Images\Games\Battlefield4.png" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Grand Theft Auto: V/Online (PS3) (PC)
         <br>
-        <img src="Media\Images\Games\GTAV.jpg" class="img-rounded" alt="Task Force 036" width="700" height="394">
+        <img src="Media\Images\Games\GTAV.jpg" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Call of Duty: Ghosts (PS3) (PC)
         <br>
-        <img src="Media\Images\Games\Ghosts.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
+        <img src="Media\Images\Games\Ghosts.png" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Arma II Free (PC)
         <br>
-        <img src="Media\Images\Games\ArmaII.png" class="img-rounded" alt="Task Force 036" width="700" height="438">
+        <img src="Media\Images\Games\ArmaII.png" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Call of Duty: Black Ops II (PS3)
         <br>
-        <img src="Media\Images\Games\BO2.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
+        <img src="Media\Images\Games\BO2.png" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Call of Duty: Modern Warfare 3 (PS3)
         <br>
-        <img src="Media\Images\Games\MW3.png" class="img-rounded" alt="Task Force 036" width="700" height="743">
+        <img src="Media\Images\Games\MW3.png" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Socom 4 (PS3)
         <br>
-        <img src="Media\Images\Games\Socom4.png" class="img-rounded" alt="Task Force 036" width="700" height="438">
+        <img src="Media\Images\Games\Socom4.png" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Call of Duty: Black Ops I (PS3)
         <br>
-        <img src="Media\Images\Games\BO1.png" class="img-rounded" alt="Task Force 036" width="700" height="394">
+        <img src="Media\Images\Games\BO1.png" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Call of Duty: Modern Warfare 2 (PS3) (PC)
         <br>
-        <img src="Media\Images\Games\MW2.png" class="img-rounded" alt="Task Force 036" width="700" height="438">
+        <img src="Media\Images\Games\MW2.png" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Grand Theft Auto: IV (PS3) (PC)
         <br>
-        <img src="Media\Images\Games\GTAIV.png" class="img-rounded" alt="Task Force 036" width="700" height="349">
+        <img src="Media\Images\Games\GTAIV.png" class="img-rounded img-responsive" alt="Task Force 036">
         <br>
         <br> Call of Duty: Modern Warfare 1 (PS3) (PC)
         <br>
-        <img src="Media\Images\Games\MW1.png" class="img-rounded" alt="Task Force 036" width="700" height="473">
+        <img src="Media\Images\Games\MW1.png" class="img-rounded img-responsive" alt="Task Force 036">
     </div>
 </div>
 
