--- a/index.html
+++ b/index.html
@@ -137,13 +137,6 @@
     </div>
 </div>
 
-
-<!-- Song Player http://playlist.me -->
-
-<!-- <script type="text/javascript" src="http://playlist.me/w/script.js" data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':true,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'Background','url':'https://taskforce036.com/Background.mp3'}]}" ></script><noscript><a href="http://playlist.me/skins/">SCM player skins</a></noscript> -->
-
-<!-- playlist.me script end -->
-
 <!-- [begin footer] -->
 
 <div class="panel panel-danger panel-body center">
@@ -156,7 +149,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha256-nuL8/2cJ5NDSSwnKD8VqreErSWHtnEP9E7AySL+1ev4=" crossorigin="anonymous"></script>
 	<script>
-        <!-- activate button for current page -->
+        // activate button for current page
         $(document).ready(function() {
             $('a[href="' + this.location.pathname + '"]').parent().addClass('active');
         });
