--- a/recruitment.html
+++ b/recruitment.html
@@ -22,7 +22,7 @@
     <![endif]-->
 
     <!-- Custom CSS Overrides -->
-	<style type="text/css">
+	<style>
         body.c5 {
             background-color:#000000; 
             background-image:url(assets/images/hexagon3.png); 
@@ -52,7 +52,7 @@
   </head>
 <body class="c5">
     <div class="container c4">
-        <nav class="navbar navbar-inverse" role="navigation">
+        <nav class="navbar navbar-inverse">
 
             <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -100,14 +100,14 @@
         <br>
         <br> Please note some of these pictures are older, therefore contain our old uniform.
 		<div class="row">
-			<div class="col-md-6"><img src="Media\Images\20161224220412_1.jpg" class="img-rounded img-responsive" alt="Winter 2016"></div>
-			<div class="col-md-6"><img src="Media\Images\20170709105351_1.jpg" class="img-rounded img-responsive" alt="2017 Uniform"></div>
+			<div class="col-md-6"><img src="Media/Images/20161224220412_1.jpg" class="img-rounded img-responsive" alt="Winter 2016"></div>
+			<div class="col-md-6"><img src="Media/Images/20170709105351_1.jpg" class="img-rounded img-responsive" alt="2017 Uniform"></div>
 			
-			<div class="col-md-6"><img src="Media\Images\20170724214702_1.jpg" class="img-rounded img-responsive" alt="In Tunnel During Op"></div>
-			<div class="col-md-6"><img src="Media\Images\20170803214017_1.jpg" class="img-rounded img-responsive" alt="Helicopter Evac"></div>
+			<div class="col-md-6"><img src="Media/Images/20170724214702_1.jpg" class="img-rounded img-responsive" alt="In Tunnel During Op"></div>
+			<div class="col-md-6"><img src="Media/Images/20170803214017_1.jpg" class="img-rounded img-responsive" alt="Helicopter Evac"></div>
 			
-			<div class="col-md-6"><img src="Media\Images\Delta Sniper.jpg" class="img-rounded img-responsive" alt="God of Death"></div>
-			<div class="col-md-6"><img src="Media\Images\Squad Messing Around.jpg" class="img-rounded img-responsive" alt="Jack Off Animation Party"></div>
+			<div class="col-md-6"><img src="Media/Images/Delta Sniper.jpg" class="img-rounded img-responsive" alt="God of Death"></div>
+			<div class="col-md-6"><img src="Media/Images/Squad Messing Around.jpg" class="img-rounded img-responsive" alt="Jack Off Animation Party"></div>
 		</div>
     </div>
 </div>
