--- a/relations.html
+++ b/relations.html
@@ -22,7 +22,7 @@
     <![endif]-->
 
     <!-- Custom CSS Overrides -->
-	<style type="text/css">
+	<style>
         body.c5 {
             background-color:#000000; 
             background-image:url(assets/images/hexagon3.png); 
@@ -52,7 +52,7 @@
   </head>
 <body class="c5">
     <div class="container c4">
-        <nav class="navbar navbar-inverse" role="navigation">
+        <nav class="navbar navbar-inverse">
 
             <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
