--- a/operatives.html
+++ b/operatives.html
@@ -26,7 +26,8 @@
         body.c5 {
             background-color:#000000; 
             background-image:url(assets/images/hexagon3.png); 
-            background-repeat:repeat-x repeat-y;margin:10px; 
+            background-repeat:repeat;
+            margin:10px; 
             background-attachment: fixed;
         }
         
