--- a/news.html
+++ b/news.html
@@ -68,11 +68,11 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="/">Main Page</a></li>
-                <li><a href="news.html">News and Events</a></li>
-                <li><a href="recruitment.html">Recruitment</a></li>
-                <li><a href="games.html">Games</a></li>
-                <li><a href="relations.html">Relations</a></li>
-                <li><a href="members.html">TF36 Operatives</a></li>
+                <li><a href="/news.html">News and Events</a></li>
+                <li><a href="/recruitment.html">Recruitment</a></li>
+                <li><a href="/games.html">Games</a></li>
+                <li><a href="/relations.html">Relations</a></li>
+                <li><a href="/members.html">TF36 Operatives</a></li>
 
             </ul>
             </div>
